[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -34.0
margin_right = 36.0
margin_bottom = 34.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 72.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -963, -376 )
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 72.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -963, -376 )
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 72.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -963, -376 )
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
